--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,45 +1,47 @@
-name: Deploy to S3 with Temporary Token Refresh
+name: Deploy to S3 with Temporary Credentials
 
 on:
   push:
     branches:
-      - main  # Jalankan pada push ke branch "main"
+      - main  # Jalankan hanya pada push ke branch main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Menjalankan di server Ubuntu
+    runs-on: ubuntu-latest  # Menjalankan di runner Ubuntu
 
     steps:
-    - name: Checkout repository  # Langkah pertama: ambil kode dari repository
-      uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3  # Mengambil kode dari repository
 
-    - name: Setup Python  # Langkah kedua: atur environment Python
+    - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
-    - name: Install dependencies  # Langkah ketiga: instal dependensi Python
+    - name: Install dependencies
       run: |
-        pip install boto3 python-dotenv
+        pip install boto3
 
-    - name: Install jq  # Langkah keempat: instal jq untuk parsing JSON
+    - name: Install jq
       run: sudo apt-get install -y jq
 
-    - name: Get New Session Token  # Langkah untuk memperbarui token sementara
+    - name: Get Temporary Credentials  # Mendapatkan kredensial sementara
       run: |
-        aws sts get-session-token --duration-seconds 3600 > session-token.json
-        export AWS_ACCESS_KEY=$(cat session-token.json | jq -r '.Credentials.AccessKeyId')
-        export AWS_SECRET_KEY=$(cat session-token.json | jq -r '.Credentials.SecretAccessKey')
-        export AWS_SESSION_TOKEN=$(cat session-token.json | jq -r '.Credentials.SessionToken')
+        aws sts assume-role \
+          --role-arn ${{ secrets.ROLE_ARN }} \
+          --role-session-name deploy-session > session.json
+        export AWS_ACCESS_KEY_ID=$(cat session.json | jq -r '.Credentials.AccessKeyId')
+        export AWS_SECRET_ACCESS_KEY=$(cat session.json | jq -r '.Credentials.SecretAccessKey')
+        export AWS_SESSION_TOKEN=$(cat session.json | jq -r '.Credentials.SessionToken')
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
-    - name: Deploy to S3  # Jalankan deployment setelah mendapatkan token baru
+    - name: Deploy to S3
       env:
-        AWS_ACCESS_KEY: $AWS_ACCESS_KEY
-        AWS_SECRET_KEY: $AWS_SECRET_KEY
+        AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+        AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
         AWS_SESSION_TOKEN: $AWS_SESSION_TOKEN
         AWS_REGION: ${{ secrets.AWS_REGION }}
         BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
