--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,50 +1,33 @@
-name: Deploy to S3 with Temporary Credentials
+name: Deploy to AWS S3
 
 on:
   push:
     branches:
-      - main  # Jalankan hanya pada push ke branch main
+      - main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Menjalankan di runner Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3  # Mengambil kode dari repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        pip install boto3
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install boto3
 
-    - name: Install jq
-      run: sudo apt-get install -y jq
-
-    - name: Get Temporary Credentials  # Mendapatkan kredensial sementara
-      run: |
-        aws sts assume-role \
-          --role-arn ${{ secrets.ROLE_ARN }} \
-          --role-session-name deploy-session > session.json
-        export AWS_ACCESS_KEY_ID=$(cat session.json | jq -r '.Credentials.AccessKeyId')
-        export AWS_SECRET_ACCESS_KEY=$(cat session.json | jq -r '.Credentials.SecretAccessKey')
-        export AWS_SESSION_TOKEN=$(cat session.json | jq -r '.Credentials.SessionToken')
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-
-    - name: Deploy to S3
-      env:
-        AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-        AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-        AWS_SESSION_TOKEN: $AWS_SESSION_TOKEN
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-        BUILD_DIR: ./build
-      run: |
-        python deploy.py
+      - name: Deploy to S3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        run: |
+          python deploy.py
